[LB-65]: Add previous lifecycle support to the lifecycle endpoint
